fix comment display on narrow screens

--- a/blogs/static/blogs/blog-post.css
+++ b/blogs/static/blogs/blog-post.css
@@ -1,11 +1,3 @@
-.comment-area {
-    margin-top: 50px;
-}
-
-.comment-list {
-    list-style: none;
-}
-
 .media-body {
     text-align: left;
 }
